<resources>
    <string name="app_name">DS24</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">Авторизация</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_invalid_login">Логин неверный</string>
    <string name="error_invalid_password">Пароль слишком коротнй</string>
    <string name="error_incorrect_password">Пароль неверный</string>
    <string name="error_field_required">Необходимо заполнить это поле</string>

    <string name="requests">Заявки</string>

    <string name="filter">Фильтр</string>
    <string name="find_with_params">Поиск по параметрам</string>

    <string name="contractors">Контрагент (юр.лицо)</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="work_type">Тип работ</string>
    <string name="reason">Причина</string>
    <string name="reason_of_call">Причина обращения</string>
    <string name="responsible">Ответственный</string>
    <string name="employee">Исполнитель</string>
    <string name="status">Статус</string>
    <string name="request_type">Тип заявки</string>
    <string name="period">Период</string>
    <string name="clear_all_filters">Сбросить все фильтры</string>

    <string name="start_date">Начальная дата</string>
    <string name="end_date">Конечная дата</string>

    <string name="exit">Выход</string>

    <string name="select_street">Выберите улицу</string>
    <string name="select_house">Выберите дом</string>
    <string name="select_work_type">Выберите тип работ</string>

    <string name="detail">Детализация</string>
    <string name="comments">Комментарии</string>
    <string name="updates">История</string>

    <string name="write_your_comment">Напишите комментарий</string>
    <string name="send">Отправить</string>

    <string name="aon_number">Звонил с</string>
    <string name="cont_number">Телефон заявителя</string>
    <string name="deadline">Срок исполнения</string>

    <string name="ok">OK</string>

    <string name="operation_error">Ошибка операции</string>
    <string name="internet_connection_error">Отсутствует подключение к серверу</string>
    <string name="tap_to_reload">Нажмите, чтобы повторить</string>
    <string name="cant_load">Не удалось загрузить</string>
    <string name="yandex_api_key">2d4e4d36-a1f8-41a8-8d77-10f696fc10cf</string>


</resources>
