<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ds24.ds24android.FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/contractors_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/contractor_selected"
                android:text="УК ЕРЕМА"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/contractors_desc"
                style="@style/second_text"
                android:text="@string/contractors"

                android:layout_below="@id/contractor_selected"/>
            <ImageView
                android:id="@+id/contractors_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/street_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/street_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/street_desc"
                style="@style/second_text"
                android:text="@string/street"
                android:layout_below="@id/street_selected"/>
            <ImageView
                android:id="@+id/street_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/house_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/house_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/house_desc"
                style="@style/second_text"
                android:text="@string/house"
                android:layout_below="@id/house_selected"/>
            <ImageView
                android:id="@+id/house_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/flat_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/flat_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/flat_desc"
                android:text="@string/flat"
                style="@style/second_text"
                android:layout_below="@id/flat_selected"/>
            <ImageView
                android:id="@+id/flat_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/cardview_dark_background"/>


        <RelativeLayout
            android:id="@+id/work_type_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/work_type_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/work_type_desc"
                style="@style/second_text"
                android:text="@string/work_type"
                android:layout_below="@id/work_type_selected"/>
            <ImageView
                android:id="@+id/work_type_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reason_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/reason_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/reason_title"
                style="@style/second_text"
                android:text="@string/reason"
                android:layout_below="@id/reason_selected"/>
            <ImageView
                android:id="@+id/reason_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/cardview_dark_background"/>


        <RelativeLayout
            android:id="@+id/responsible_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/responsible_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/responsible_title"
                style="@style/second_text"
                android:text="@string/responsible"
                android:layout_below="@id/responsible_selected"/>
            <ImageView
                android:id="@+id/responsible_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/employee_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/employee_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/responsible_desc"
                style="@style/second_text"
                android:text="@string/employee"
                android:layout_below="@id/employee_selected"/>
            <ImageView
                android:id="@+id/employee_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/cardview_dark_background"/>


        <RelativeLayout
            android:id="@+id/status_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/status_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/status_desc"
                style="@style/second_text"
                android:text="@string/status"
                android:layout_below="@id/status_selected"/>
            <ImageView
                android:id="@+id/status_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/request_type_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/request_type_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/request_type_desc"
                style="@style/second_text"
                android:text="@string/request_type"
                android:layout_below="@id/request_type_selected" />
            <ImageView
                android:id="@+id/request_type_delete"
                style="@style/clear_filter_button"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/cardview_dark_background"/>

        <RelativeLayout
            android:id="@+id/period_layout"
            style="@style/material_2lines_item_layout">
            <TextView
                android:id="@+id/period_selected"
                style="@style/primary_text"/>
            <TextView
                android:id="@+id/period_desc"
                style="@style/second_text"
                android:layout_below="@id/period_selected"
                android:text="@string/period" />

            <ImageView
                android:id="@+id/period_delete"
                style="@style/clear_filter_button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/clear_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_delete"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>