<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ds24.ds24android.fragments.DetailFragment"
    android:padding="8dp"
    >

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_detail">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/parent_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/created_at_text"
                    style="@style/primary_text"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/address"
                    style="@style/primary_text"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/created_at_text"/>

                <TextView
                    android:id="@+id/work_type"
                    style="@style/primary_text"
                    android:layout_below="@id/address"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/note"
                    style="@style/primary_text"
                    android:layout_below="@id/work_type"
                    android:layout_marginTop="16dp"/>

                <RelativeLayout
                    android:id="@+id/cont_phone_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cont_phone_desc"
                        style="@style/primary_text"
                        android:text="@string/cont_number" />

                    <ImageView
                        android:id="@+id/cont_phone_call_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_toRightOf="@id/cont_phone_desc"
                        android:src="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/cont_phone_value"
                        style="@style/primary_text"
                        android:layout_alignTop="@+id/cont_phone_call_image"
                        android:layout_toEndOf="@+id/cont_phone_call_image"
                        android:layout_toRightOf="@+id/cont_phone_call_image"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/aon_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cont_phone_layout"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/aon_desc"
                        style="@style/primary_text"
                        android:text="@string/aon_number" />

                    <ImageView
                        android:id="@+id/aon_call_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_toRightOf="@id/aon_desc"
                        android:src="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/aon_value"
                        style="@style/primary_text"
                        android:layout_alignTop="@+id/aon_call_image"
                        android:layout_toEndOf="@+id/aon_call_image"
                        android:layout_toRightOf="@+id/aon_call_image"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/content_separator"
                    android:layout_below="@id/aon_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/divider_color"/>

                <RelativeLayout
                    android:id="@+id/status_change_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_separator"
                    android:layout_marginTop="16dp">
                    <TextView
                       android:id="@+id/status_value"
                       style="@style/primary_text" />
                    <TextView
                        android:id="@+id/status_desc"
                        style="@style/second_text"
                        android:layout_below="@id/status_value"
                        android:text="@string/status" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/status_separator"
                    android:layout_below="@id/status_change_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/divider_color"/>


                <RelativeLayout
                    android:id="@+id/employee_change_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status_separator"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:id="@+id/employee_value"
                        style="@style/primary_text" />
                    <TextView
                        android:id="@+id/employee_desc"
                        style="@style/second_text"
                        android:layout_below="@id/employee_value"
                        android:text="@string/employee" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/employee_separator"
                    android:layout_below="@id/employee_change_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/divider_color"/>


                <RelativeLayout
                    android:id="@+id/responsible_change_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_separator"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:id="@+id/responsible_value"
                        style="@style/primary_text" />
                    <TextView
                        android:id="@+id/responsible_desc"
                        style="@style/second_text"
                        android:layout_below="@id/responsible_value"
                        android:text="@string/responsible" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/responible_separator"
                    android:layout_below="@id/responsible_change_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/divider_color"/>

                <RelativeLayout
                    android:id="@+id/deadline_change_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/responible_separator"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:id="@+id/deadline_value"
                        style="@style/primary_text" />
                    <TextView
                        android:id="@+id/deadline_desc"
                        style="@style/second_text"
                        android:layout_below="@id/deadline_value"
                        android:text="@string/deadline" />
                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>
